--- a/configure.ac
+++ b/configure.ac
@@ -420,6 +420,7 @@ AS_IF([test x$enable_guide_message = xyes],
         AS_ECHO([])
       ]
      )
+  AS_ECHO(["(Configure with '--disable-guide-message' for no messages)"])
   AS_ECHO([===================================================================])
   AS_ECHO([===================================================================])
   AS_ECHO([])
