Ignore .dvi files and gnulib/ directory
*.dvi and /gnulib/ were added to .gitignore. DVI files can also be created
 by Texinfo. Also, when the ./bootstrap command is run directly in
 Gnuastro's top directory, it will clone Gnulib in a new /gnulib/ directory
 which we have to ignore in Gnuastro's git.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 *.tp
 *.vr
 *.aux
+*.dvi
 *.eps
 *.jpg
 *.log
@@ -120,6 +121,7 @@ utilityversions.texi
 # ignore the whole directory (and everything within it). This is more
 # efficient then leaving it to try to fit patterns.
 
+/gnulib/
 /bootstrapped/
 /doc/plotsrc/tikz/
 /doc/gnuastro.t2d/
