Dependencies defined for tests
As described in bug #47957, the tests depend on each other. However, until
now, there was no specific definition of this dependence. Therefore `make
check' could not be run on multiple threads. Now dependencies are clearly
defined in `tests/makefile.am' as explained in the "Parallel test harness"
section of the Automake manual (using the `.log' outputs).

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -51,3 +51,61 @@ mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt imgcrop/cat.txt
 
 CLEANFILES = *.log *.txt *.jpg *.fits *.pdf *.eps .gnuastro/*.conf	\
 .gnuastro
+
+
+
+
+
+## Dependency structure
+## ====================
+##
+## When run with `-jN' option, the tests can be run in parallel, so we need
+## to define their dependencies on each other here. The output of all the
+## tests that should be used (is recognized by Automake and will not mess
+## the system) is the name of the test file appended by a `.log'. It
+## contains the output of the program on standard output and error. THIS IS
+## IMPORTANT: So even if the program fails, the .log file is created. The
+## check if the input for a test exists or not should be checked in the
+## test that depends on it, it can't be done here in the Makefile.
+
+mkprof/mosaic1.sh: prepconf.sh.log
+mkprof/mosaic2.sh: prepconf.sh.log
+mkprof/mosaic3.sh: prepconf.sh.log
+mkprof/mosaic4.sh: prepconf.sh.log
+imgcrop/imgcat.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+imgcrop/wcscat.sh: prepconf.sh.log mkprof/mosaic1.sh.log mkprof/mosaic2.sh.log \
+                                   mkprof/mosaic3.sh.log mkprof/mosaic4.sh.log
+imgcrop/xcyc.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+imgcrop/xcycnoblank.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+imgcrop/section.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+imgcrop/radec.sh: prepconf.sh.log mkprof/mosaic1.sh.log mkprof/mosaic2.sh.log \
+                                  mkprof/mosaic3.sh.log mkprof/mosaic4.sh.log
+imgcrop/imgpolygon.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+imgcrop/imgoutpolygon.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+imgcrop/wcspolygon.sh: prepconf.sh.log mkprof/mosaic1.sh.log                  \
+                       mkprof/mosaic2.sh.log mkprof/mosaic3.sh.log            \
+                       mkprof/mosaic4.sh.log
+convertt/fitstotxt.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+convertt/fitstojpeg.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+convertt/blankch.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+convertt/jpegtotxt.sh: prepconf.sh.log convertt/fitstojpeg.sh.log
+convertt/fitstojpegcmyk.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+convertt/jpegtofits.sh: prepconf.sh.log convertt/blankch.sh.log
+convertt/fitstopdf.sh: prepconf.sh.log imgcrop/section.sh.log
+convolve/spatial.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+convolve/frequency.sh: prepconf.sh.log mkprof/mosaic1.sh.log
+imgwarp/imgwarp_scale.sh: prepconf.sh.log convolve/spatial.sh.log
+imgwarp/homographic.sh: prepconf.sh.log convolve/spatial.sh.log
+mknoise/addnoise.sh: prepconf.sh.log imgwarp/imgwarp_scale.sh.log
+mkprof/ellipticalmasks.sh: prepconf.sh.log mknoise/addnoise.sh.log
+header/write.sh: prepconf.sh.log convolve/spatial.sh.log
+header/print.sh: prepconf.sh.log header/write.sh.log
+header/update.sh: prepconf.sh.log header/write.sh.log
+header/delete.sh: prepconf.sh.log header/write.sh.log
+imgstat/basicstats.sh: prepconf.sh.log mknoise/addnoise.sh.log
+subtractsky/subtractsky.sh: prepconf.sh.log mknoise/addnoise.sh.log
+noisechisel/noisechisel.sh: prepconf.sh.log mknoise/addnoise.sh.log
+mkcatalog/simple.sh: prepconf.sh.log noisechisel/noisechisel.sh.log
+arithmetic/snimage.sh: prepconf.sh.log noisechisel/noisechisel.sh.log
+arithmetic/onlynumbers.sh: prepconf.sh.log
+cosmiccal/simpletest.sh: prepconf.sh.log
