Utilities no longer have an independent version number
Until now the utilities had an independent version number for
themselves. In some releases, some utilities might not have undergone any
change, so their version number would remain unchanged while the overall
Gnuastro version number would increase. This was meaningful for a manual
version number (on an official releases).

However, after adopting Gnulib's git-version-gen to automatically generate
a version number from the Git history (task #13991), the independent
version numbers for each package could cause great confusion. So they are
now removed. Any noteworthy change in a utility for each release is
described in the NEWS file along with the utility name, so an interested
user in a particular utility can easily search NEWS to see if anything
relevant to their usage has changed in an official release.

This finishes task #14000.

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-i# Process this file with autoconf to produce a configure script.
+# Process this file with autoconf to produce a configure script.
 #
 # Hand written file: used as input into GNU Autotools (autoconf).
 # This is part of GNU Astronomy Utilities (gnuastro) package.
