Corrected end of configure message
One of the two suggestions after `./configure' had a period in the end of
the sentence, while the other didn't. This is corrected now: the one
without a period now has one. All the messages after each `make' step also
has this structure (a fullstop before the closing parenthesis).

--- a/configure.ac
+++ b/configure.ac
@@ -420,7 +420,7 @@ AS_IF([test x$enable_guide_message = xyes],
       ]
      )
   AS_ECHO(["(Build faster on N threads with 'make -jN'.)"])
-  AS_ECHO(["(Configure with '--disable-guide-message' for no messages)"])
+  AS_ECHO(["(Configure with '--disable-guide-message' for no messages.)"])
   AS_ECHO([===================================================================])
   AS_ECHO([===================================================================])
   AS_ECHO([])
