doc/fdl.texi is no longer under version control
The GNU Free Documentation License (FDL) is included within Gnulib,
therefore it was wrong to keep it under version control in Gnuastro. With
this commit, it is no longer tracked and is imported from Gnulib.

There is a problem though. As far as I have understood so far, including
the following command in the `doc/Makefile.am' should have been enough to
easily build Gnuastro with the `fdl.texi' file in the `bootstrapped/doc'
directory.

    AM_MAKEINFOFLAGS = -I $(top_srcdir)/bootstrapped/doc

While this does work for Info and HTML outputs, for PDF and DVI outputs it
fails. So for the time being, the bootstrap process puts a copy of
`fdl.texi' within the `doc/' directory to do the job. If a more elegant
solution can be found such that this copy is not needed and all
documentation can be built with `fdl.texi' in the `bootstrap/doc/'
directory, it would be much better. A mail was sent to bug-automake to see
if this is a bug worth fixing or not.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -127,6 +127,10 @@ bootstrap_post_import_hook()
     done
   fi
 
+  # Until we find a solution to making PDF and DVI files with the
+  # AM_MAKEINFOFLAGS Automake variable, we need to copy the fdl.texi file
+  # into the doc/ directory.
+  cp bootstrapped/doc/fdl.texi doc/fdl.texi
 }
 
 
@@ -159,6 +163,7 @@ bootstrap_epilogue()
 
 # gnulib modules used by this package.
 gnulib_modules="
+    fdl
     math
     argp
     error
