fdl.texi is now kept in the bootstrapped directory
In an effort to keep the `doc/' directory as clean (from non-hand-written
files) as possible, a work-around is used to keep the `fdl.texi' file in
the `bootstrapped/doc' directory instead of having to copy it in `doc/'
during the bootstrapping process (as done in e80944a: doc/fdl.texi is no
longer under version control).

This process was inspired by the solution to Automake bug report #23599
which I submitted, Mathieu Lirzin suggested overriding the value of
`TEXI2DVI' which is a nice solution. However for some reason, Automake
complains about the value substitution and exits with an error. So what I
have done now is to manually (using SED) correct the value of TEXI2DVI at
the end of the bootstrap process in bootstrap.conf's `bootstrap_epologue'.

This is not a good solution, because if automake is ran outside of the
bootstrap process (for example when editing the `Makefile.am's), then it
will not be able to build PDF and DVI outputs.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -126,11 +126,6 @@ bootstrap_post_import_hook()
         "http://git.savannah.gnu.org/gitweb/?p=autoconf-archive.git;a=blob_plain;f=m4/ax_$m4name.m4" || die "Failed to download ax_$m4name.m4!"
     done
   fi
-
-  # Until we find a solution to making PDF and DVI files with the
-  # AM_MAKEINFOFLAGS Automake variable, we need to copy the fdl.texi file
-  # into the doc/ directory.
-  cp bootstrapped/doc/fdl.texi doc/fdl.texi
 }
 
 
@@ -139,6 +134,12 @@ bootstrap_post_import_hook()
 # operations are complete.
 bootstrap_epilogue()
 {
+  # This is a temporary work-around to the problem of not being able to
+  # override the value of TEXI2DVI in doc/Makefile.am.
+  sed 's/TEXI2DVI = texi2dvi/TEXI2DVI = texi2dvi -I $(BOOTSTRPDOC)/'  \
+      doc/Makefile.in > doc/Makefile.in.tmp
+  mv doc/Makefile.in.tmp doc/Makefile.in
+
   # Prepare all the figure formats for the various manual formats.
   cd doc/plotsrc
   make
