doc/genauthors works on a separate build directory
Until now, the `doc/genauthors' script was only set up to work when the
build and source directories where the same. If they were different, this
script would fail to find a Git repository. So it now takes in an argument
(the `top_srcdir' variable) and uses it in checking for a `.git' directory
and importing the `.mailmap' file. It then uses them with Git to build the
authors.texi file in the output directory.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -50,9 +50,9 @@ EXTRA_DIST = genauthors README
 ## We want to build the authors.texi file only when we are building in the
 ## version controlled source. For the non version controlled souce,
 ## deleting this file is like somehow deleting formath.texi, it will not be
-## rebuilt.
+## rebuilt and result in an error.
 authors.texi: $(top_srcdir)/configure
-	$(top_srcdir)/doc/genauthors
+	$(top_srcdir)/doc/genauthors $(top_srcdir)
 
 
 ## Images:
