No more warning errors from Automake
Thanks to Mathieu Lirzin from Automake, the override problem mentioned in
commit 0394025 (fdl.texi is now kept in the bootstrapped directory) was
found to be due to the `-Werror' option that was passed to Automake in
`configure.ac'. So the workaround mentioned in commit 5d8967c (Better
workaround for fdl.texi) is no longer necessary.

To avoid such issues raising again, the -Werror option was removed from
`AM_INIT_AUTOMAKE' in `configure.ac'. All warnings will be printed and will
thus be clearly visible, however, there will be no error.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -38,16 +38,8 @@ AM_MAKEINFOFLAGS = -I $(bootstrpdoc)
 
 # This is just a temporary work-around since Automake does not pass the
 # AM_MAKEINFOFLAGS to texi2dvi (which builds DVI and PDF outputs). This was
-# reported in Automake's bug 23599. A better way than the solution below
-# would have been to add the flags to the TEXI2DVI variable like this:
-#
-#    TEXI2DVI = texi2dvi -I $(bootstrpdoc)
-#
-# However, strangely, Automake doesn't allow us to override the value of
-# TEXI2DVI! So the only remaining tool that can be used to pass this
-# include directive to texi2dvi is the AM_V_texinfo. It appears it was
-# there to limit verbosity, but for the time being we are using it here.
-AM_V_texinfo = -I $(bootstrpdoc)
+# reported in Automake's bug 23599.
+TEXI2DVI = texi2dvi -I $(bootstrpdoc)
 
 
 ## Commands to make the texinfo tools.
