--- a/src/convertt/Makefile.am
+++ b/src/convertt/Makefile.am
@@ -18,9 +18,16 @@
 ## You should have received a copy of the GNU General Public License
 ## along with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
+
+
+
+
+# Check if the system has libjpeg installed.
 if COND_HASLIBJPEG
    MAYBE_HASLIBJPEG = -ljpeg
 endif
+
+
 
 
 
@@ -30,7 +37,7 @@ AM_CFLAGS = -Wall -O3
 AM_LDFLAGS = -lcfitsio -lwcs -lm $(MAYBE_HASLIBJPEG) -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
--I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
+              -I$(top_srcdir)/bootstrapped/lib
 
 
 
