--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -19,13 +19,16 @@
 ## along with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
 
+
+
+
 # Flags:
 AM_CFLAGS = -Wall -O3
 
 AM_LDFLAGS = -lcfitsio -lwcs  -lgsl -lgslcblas -lm -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
--I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
+              -I$(top_srcdir)/bootstrapped/lib
 
 
 
