--- a/src/imgstat/Makefile.am
+++ b/src/imgstat/Makefile.am
@@ -18,13 +18,17 @@
 ## You should have received a copy of the GNU General Public License
 ## along with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
+
+
+
+
 # Flags:
 AM_CFLAGS = -Wall -O3
 
 AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
--I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
+              -I$(top_srcdir)/bootstrapped/lib
 
 
 
