--- a/src/mkcatalog/Makefile.am
+++ b/src/mkcatalog/Makefile.am
@@ -21,13 +21,14 @@
 
 
 
+
 # Flags:
 AM_CFLAGS = -Wall -O3
 
 AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm -L$(top_builddir)/lib
 
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/lib	\
--I$(top_builddir)/bootstrapped/lib -I$(top_srcdir)/bootstrapped/lib
+              -I$(top_srcdir)/bootstrapped/lib
 
 
 
